--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -1,3 +1,10 @@
+@using ScissorHands.Core.Manifests
+@using ScissorHands.Core.Models
+@using ScissorHands.Theme.MinimalBlog.Components.Footer
+@using ScissorHands.Theme.MinimalBlog.Components.Header
+@using ScissorHands.Theme.MinimalBlog.Components.PostCard
+@using ScissorHands.Theme.MinimalBlog.Components.TagList
+
 @using Theme = ScissorHands.Core.Manifests.ThemeManifest
 
-@namespace ScissorHands.Theme.Template
+@namespace ScissorHands.Theme.MinimalBlog
