--- a/src/IndexView.razor
+++ b/src/IndexView.razor
@@ -2,31 +2,15 @@
 @layout MainLayout
 
 <section class="home">
-    <!-- Home page content goes here. -->
-    @foreach (var document in Documents)
-    {
-        <article>
-            <div>
-                <a href="/@document.Metadata.Slug">@document.Metadata.Title</a>
-            </div>
-            @if (string.IsNullOrWhiteSpace(document.Metadata.Description) == false)
-            {
-                <div>
-                    <p>@document.Metadata.Description</p>
-                </div>
-            }
-            @if (document.Metadata.Tags.Any())
-            {
-                <ul>
-                    @foreach (var tag in document.Metadata.Tags)
-                    {
-                        <li>@tag</li>
-                    }
-                </ul>
-            }
-        </article>
-    }
-</section>
-<section class="sidebar">
-    <!-- Sidebar content goes here. -->
+    <header class="home hero">
+        <p class="home eyebrow">Welcome to</p>
+        <h1 class="home title">@((MarkupString)Site!.Title)</h1>
+        <p class="home subtitle">@((MarkupString)Site!.Description)</p>
+    </header>
+    <div class="home list">
+        @foreach (var post in Documents)
+        {
+            <PostCard Post="@post" MaxDescriptionLength="150" />
+        }
+    </div>
 </section>
