--- a/src/MainLayout.razor
+++ b/src/MainLayout.razor
@@ -4,10 +4,15 @@
 <html lang="en">
 <head>
     <base href="@Site!.BaseUrl" />
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>@Site!.Title</title>
     <link rel="icon" type="image/x-icon" href="@($"/themes/{Theme!.Slug.TrimEnd('/')}/favicon.ico")" />
+    <meta name="generator" content="ScissorHands.NET v1.0.0" />
+
+    <title>@((MarkupString)Site!.Title)</title>
+    <meta name="title" content="@((MarkupString)Site!.Title)" />
+    <meta name="description" content="@((MarkupString)Site!.Description)" />
     @if (Theme!.Stylesheets is not null)
     {
         foreach (var css in Theme!.Stylesheets)
@@ -17,15 +22,14 @@
     }
 </head>
 <body>
-    <header>
-        <!-- Header content goes here. -->
-    </header>
-    <main>
+    <Header Site="Site" Theme="Theme" />
+
+    <main class="site-main">
         @Body
     </main>
-    <footer>
-        <!-- Footer content goes here. -->
-    </footer>
+
+    <Footer Site="Site" />
+
     @if (Theme!.Scripts is not null)
     {
         foreach (var script in Theme!.Scripts)
