Add GitHub button

--- a/src/MainLayout.razor
+++ b/src/MainLayout.razor
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="@($"/themes/{Theme!.Slug.TrimEnd('/')}/favicon.ico")" />
-    <meta name="generator" content="ScissorHands.NET v1.0.0" />
+    <meta name="generator" content="@Site!.Generator" />
 
     <title>@((MarkupString)Site!.Title)</title>
     <meta name="title" content="@((MarkupString)Site!.Title)" />
