--- a/src/Components/Header.razor
+++ b/src/Components/Header.razor
@@ -5,10 +5,16 @@
         <a href="/" class="site-title">
             <h1>@((MarkupString)Site!.Title)</h1>
         </a>
-        <button id="dark-mode-toggle" class="dark-mode-toggle" aria-label="Toggle dark mode">
-            <img src="@($"/themes/{Theme!.Slug.TrimEnd('/')}/assets/images/sun-icon.svg")" alt="Light mode" class="sun-icon" width="24" height="24" />
-            <img src="@($"/themes/{Theme!.Slug.TrimEnd('/')}/assets/images/moon-icon.svg")" alt="Dark mode" class="moon-icon" width="24" height="24" style="display: none;" />
-        </button>
+        <div class="header-actions">
+            <button id="dark-mode-toggle" class="dark-mode-toggle" aria-label="Toggle dark mode">
+                <img src="@($"/themes/{Theme!.Slug.TrimEnd('/')}/assets/images/sun-icon.svg")" alt="Light mode" class="sun-icon" width="24" height="24" />
+                <img src="@($"/themes/{Theme!.Slug.TrimEnd('/')}/assets/images/moon-icon.svg")" alt="Dark mode" class="moon-icon" width="24" height="24" style="display: none;" />
+            </button>
+            <div class="dark-mode-toggle-github">
+                <a href="https://github.com/getscissorhands/minimal-blog" target="_blank"><img src="https://cdn.simpleicons.org/github/181717" alt="GitHub light mode" class="sun-icon-github" width="24" height="24" /></a>
+                <a href="https://github.com/getscissorhands/minimal-blog" target="_blank"><img src="https://cdn.simpleicons.org/github/FFFFFF" alt="GitHub dark mode" class="moon-icon-github" width="24" height="24" style="display: none;" /></a>
+            </div>
+        </div>
     </div>
 </header>
 
