--- a/src/MainLayout.razor
+++ b/src/MainLayout.razor
@@ -3,6 +3,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <plugin:google-analytics />
+
     <base href="@Site!.BaseUrl" />
 
     <meta charset="utf-8" />
