--- a/src/IndexView.razor
+++ b/src/IndexView.razor
@@ -5,7 +5,7 @@
     <header class="home hero">
         <p class="home eyebrow">Welcome to</p>
         <h1 class="home title">@((MarkupString)Site!.Title)</h1>
-        <p class="home subtitle">@((MarkupString)Site!.Description)</p>
+        <p class="home subtitle">@((MarkupString)Site!.DescriptionInHtml!)</p>
     </header>
     <div class="home list">
         @foreach (var post in Documents)
