--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -1,5 +1,7 @@
 @using ScissorHands.Core.Manifests
 @using ScissorHands.Core.Models
+@using ScissorHands.Plugin.GoogleAnalytics
+@using ScissorHands.Plugin.OpenGraph
 @using ScissorHands.Theme.MinimalBlog.Components.Footer
 @using ScissorHands.Theme.MinimalBlog.Components.Header
 @using ScissorHands.Theme.MinimalBlog.Components.PostCard
