--- a/src/MainLayout.razor
+++ b/src/MainLayout.razor
@@ -14,7 +14,7 @@
     <meta name="generator" content="@Site!.Generator" />
 
     <title>@SiteTitle</title>
-    <meta name="title" content="@Site.Title" />
+    <meta name="title" content="@SiteTitle" />
     <meta name="description" content="@Site!.Description" />
 
     <OpenGraphComponent Documents="@Documents" Document="@Document" Plugin="@OpenGraphPlugin" Theme="@Theme" Site="@Site" />
