--- a/src/Components/Header.razor
+++ b/src/Components/Header.razor
@@ -19,9 +19,15 @@
 </header>
 
 @code {
-    [Parameter]
-    public SiteManifest Site { get; set; } = new();
+    /// <summary>
+    /// Gets or sets the <see cref="SiteManifest"/> instance.
+    /// </summary>
+    [CascadingParameter]
+    public SiteManifest? Site { get; set; }
 
-    [Parameter]
-    public ThemeManifest Theme { get; set; } = new();
+    /// <summary>
+    /// Gets or sets the <see cref="ThemeManifest"/> instance.
+    /// </summary>
+    [CascadingParameter]
+    public ThemeManifest? Theme { get; set; }
 }
