--- a/src/PageView.razor
+++ b/src/PageView.razor
@@ -2,16 +2,16 @@
 @layout MainLayout
 
 <section class="page">
-    @if (!string.IsNullOrWhiteSpace(Document.Metadata.HeroImage))
+    @if (string.IsNullOrWhiteSpace(Document?.Metadata.HeroImage) == false)
     {
         <div class="page hero-image">
             <img src="@Document.Metadata.HeroImage" alt="@Document.Metadata.Title" />
         </div>
     }
     <header class="page header">
-        <h1 class="page title">@Document.Metadata.Title</h1>
+        <h1 class="page title">@Document?.Metadata.Title</h1>
     </header>
     <article class="page body">
-        @((MarkupString)Document.Html)
+        @((MarkupString)Document?.Html!)
     </article>
 </section>
